Changes to image label

--- a/data-512-a1/Assignment1.ipynb
+++ b/data-512-a1/Assignment1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +101,14 @@
     "    '''\n",
     "    \n",
     "    ## Open the scope to access json files\n",
-    "    with open(fileName+'.json', 'w') as outfile:\n",
+    "    with open('./json/'+fileName+'.json', 'w') as outfile:\n",
     "        json.dump(request.json(), outfile)\n",
     "    \n",
     "    ## The data is contained in the parent key \"items\".\n",
     "    pageView = request.json()['items']\n",
     "    \n",
     "    ## create a csv file for each request\n",
-    "    csv_file = open(fileName+'.csv', 'w')\n",
+    "    csv_file = open('./csv/'+fileName+'.csv', 'w')\n",
     "    \n",
     "    ## Add data to each csv file\n",
     "    csv_writer = csv.writer(csv_file)\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,18 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Read all the csv files\n",
-    "pageViews_mobileweb = pd.read_csv('pageviews_mobile-web_201507-202009.csv')\n",
-    "pageViews_mobileapp = pd.read_csv('pageviews_mobile-app_201507-202009.csv')\n",
-    "pageViews_allAccess = pd.read_csv('pageviews_all-access_201507-202009.csv')\n",
-    "pageViews_desktop = pd.read_csv('pageviews_desktop_201507-202009.csv')\n",
-    "pageCounts_allAccess = pd.read_csv('pagecounts_all-access_200801-201607.csv')\n",
-    "pageCounts_desktop = pd.read_csv('pagecounts_desktop-site_200801-201607.csv')\n",
-    "pageCounts_mobile = pd.read_csv('pagecounts_mobile-site_200801-201607.csv')\n"
+    "pageViews_mobileweb = pd.read_csv('./csv/pageviews_mobile-web_201507-202009.csv')\n",
+    "pageViews_mobileapp = pd.read_csv('./csv/pageviews_mobile-app_201507-202009.csv')\n",
+    "pageViews_allAccess = pd.read_csv('./csv/pageviews_all-access_201507-202009.csv')\n",
+    "pageViews_desktop = pd.read_csv('./csv/pageviews_desktop_201507-202009.csv')\n",
+    "pageCounts_allAccess = pd.read_csv('./csv/pagecounts_all-access_200801-201607.csv')\n",
+    "pageCounts_desktop = pd.read_csv('./csv/pagecounts_desktop-site_200801-201607.csv')\n",
+    "pageCounts_mobile = pd.read_csv('./csv/pagecounts_mobile-site_200801-201607.csv')\n"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
     "wikipedia_traffic = pd.merge(pageCounts, pageViews, on=['year','month'], how='outer')\n",
     "\n",
     "## Output the final CSV\n",
-    "wikipedia_traffic.to_csv('en-wikipedia_traffic_200801-202009.csv', header = True)"
+    "wikipedia_traffic.to_csv('./csv/en-wikipedia_traffic_200801-202009.csv', header = True)"
    ]
   },
   {
@@ -376,229 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>pagecount_all_views</th>\n",
-       "      <th>pagecount_desktop_views</th>\n",
-       "      <th>pagecount_mobile_views</th>\n",
-       "      <th>pageview_all_views</th>\n",
-       "      <th>pageview_desktop_views</th>\n",
-       "      <th>pageview_mobile_views</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2008-01-01</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>01</td>\n",
-       "      <td>9.154429e+09</td>\n",
-       "      <td>9.154429e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-02-01</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>02</td>\n",
-       "      <td>8.843288e+09</td>\n",
-       "      <td>8.843288e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-03-01</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>03</td>\n",
-       "      <td>9.191927e+09</td>\n",
-       "      <td>9.191927e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-04-01</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>04</td>\n",
-       "      <td>9.645857e+09</td>\n",
-       "      <td>9.645857e+09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008-05-01</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>05</td>\n",
-       "      <td>1.069643e+10</td>\n",
-       "      <td>1.069642e+10</td>\n",
-       "      <td>6485.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-05-01</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.840342e+10</td>\n",
-       "      <td>6.777243e+09</td>\n",
-       "      <td>1.162617e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-06-01</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.542529e+10</td>\n",
-       "      <td>5.756011e+09</td>\n",
-       "      <td>9.669275e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-07-01</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.528387e+10</td>\n",
-       "      <td>5.388701e+09</td>\n",
-       "      <td>9.895168e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-08-01</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>08</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.532596e+10</td>\n",
-       "      <td>5.218751e+09</td>\n",
-       "      <td>1.010721e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-09-01</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.525415e+10</td>\n",
-       "      <td>5.556517e+09</td>\n",
-       "      <td>9.697631e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>153 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            year month  pagecount_all_views  pagecount_desktop_views  \\\n",
-       "Date                                                                   \n",
-       "2008-01-01  2008    01         9.154429e+09             9.154429e+09   \n",
-       "2008-02-01  2008    02         8.843288e+09             8.843288e+09   \n",
-       "2008-03-01  2008    03         9.191927e+09             9.191927e+09   \n",
-       "2008-04-01  2008    04         9.645857e+09             9.645857e+09   \n",
-       "2008-05-01  2008    05         1.069643e+10             1.069642e+10   \n",
-       "...          ...   ...                  ...                      ...   \n",
-       "2020-05-01  2020    05                  NaN                      NaN   \n",
-       "2020-06-01  2020    06                  NaN                      NaN   \n",
-       "2020-07-01  2020    07                  NaN                      NaN   \n",
-       "2020-08-01  2020    08                  NaN                      NaN   \n",
-       "2020-09-01  2020    09                  NaN                      NaN   \n",
-       "\n",
-       "            pagecount_mobile_views  pageview_all_views  \\\n",
-       "Date                                                     \n",
-       "2008-01-01                     NaN                 NaN   \n",
-       "2008-02-01                     NaN                 NaN   \n",
-       "2008-03-01                     NaN                 NaN   \n",
-       "2008-04-01                     NaN                 NaN   \n",
-       "2008-05-01                  6485.0                 NaN   \n",
-       "...                            ...                 ...   \n",
-       "2020-05-01                     NaN        1.840342e+10   \n",
-       "2020-06-01                     NaN        1.542529e+10   \n",
-       "2020-07-01                     NaN        1.528387e+10   \n",
-       "2020-08-01                     NaN        1.532596e+10   \n",
-       "2020-09-01                     NaN        1.525415e+10   \n",
-       "\n",
-       "            pageview_desktop_views  pageview_mobile_views  \n",
-       "Date                                                       \n",
-       "2008-01-01                     NaN                    NaN  \n",
-       "2008-02-01                     NaN                    NaN  \n",
-       "2008-03-01                     NaN                    NaN  \n",
-       "2008-04-01                     NaN                    NaN  \n",
-       "2008-05-01                     NaN                    NaN  \n",
-       "...                            ...                    ...  \n",
-       "2020-05-01            6.777243e+09           1.162617e+10  \n",
-       "2020-06-01            5.756011e+09           9.669275e+09  \n",
-       "2020-07-01            5.388701e+09           9.895168e+09  \n",
-       "2020-08-01            5.218751e+09           1.010721e+10  \n",
-       "2020-09-01            5.556517e+09           9.697631e+09  \n",
-       "\n",
-       "[153 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Create date column\n",
     "wikipedia_traffic['Date'] = pd.to_datetime(wikipedia_traffic['month'].astype(str) + '/' + '1' + '/' + wikipedia_traffic['year'].astype(str), format='%m/%d/%Y')\n",
@@ -619,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +431,7 @@
        "Text(0, 0.5, 'Count or Views on pages')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
