Added Answer to implication

--- a/data-512-a2/ToxicityAnalysis.ipynb
+++ b/data-512-a2/ToxicityAnalysis.ipynb
@@ -2110,7 +2110,7 @@
    "source": [
     "#### Q2) What are some kinds of hostile speech that would be difficult to accurately detect using the approach used to train the Perspective API models? \n",
     "\n",
-    "I think sarcastic comments, indirect implications to ethinicity, race, caste or religion would be hard to recognize for the Perspective API."
+    "I think sarcastic comments, indirect implications to ethinicity, race, caste or religion would be hard to recognize for the Perspective API. The algorithms are generally based on learning directly from the text or from features derived from it. But saracasm are difficult to detect in language, even as humans we rely on the knowledge about the person and their expression (in addition to what they say) to determine whether a comment was sarcastic or not   "
    ]
   },
   {
